manifests/letters/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letters
  namespace: letters
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: letters
