manifests/letters/06-backend.yaml
# 1. Deployment für das Python Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berichtsheft-api-deployment
  labels:
    app: berichtsheft-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: berichtsheft-api
  template:
    metadata:
      labels:
        app: berichtsheft-api
    spec:
      containers:
      - name: api
        image: log1schebanane/tagebuch-backend:1.0 # Dein gepushtes Image
        ports:
        - containerPort: 5000 # Der Port, den deine Flask-Anwendung nutzt
---
# 2. Service für das Python Backend (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: letters
spec:
  selector:
    app: berichtsheft-api
  ports:
    - protocol: TCP
      port: 80 # Service-Port
      targetPort: 5000 # Container-Port
  type: ClusterIP # Nur innerhalb des Clusters erreichbar
